# NeuralMesh

./: .env.example  .gitignore  ACTUAL_CODE_VERIFICATION.md  API.md  API_QUICK_REF.md  CHANGELOG.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_SESSION_SUMMARY.md  DEVICE_MANAGEMENT.md  DEVICE_TRANSFORMATION.md  Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  ENHANCEMENTS.md  EVERYTHING_FULLY_DEVELOPED.md  FEATURES_GUIDE.md  FINAL_VERIFICATION.md  FREE_PLATFORM.md  IMPLEMENTATION_VERIFICATION.md  INSTALLATION_GUIDE.md  INSTALL_METHODS.md  PROJECT_COMPLETE.md  PROJECT_FIX_SUMMARY.md  PROJECT_STATUS_COMPLETE.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SERVER_CAPABILITIES.md  SERVER_MANAGEMENT.md  SETUP.md  SETUP_VERIFICATION.md  SUMMARY_v0.7.0.md  TASK_COMPLETE.md  (+21 more)
.github/workflows/: ci.yml
agent/: Cargo.toml  README.md
agent/src/: main.rs
backend/: .env.example  Dockerfile  drizzle.config.ts  index-combined.ts  index-ws.ts  index.ts  package-lock.json  package.json
backend/src/db/: index.ts  schema.ts
backend/tests/: api.test.ts  setup.ts
docker/: nginx.conf
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/tests/: setup.ts
kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml
scripts/: generate-secrets.js
(+99 files in other folders)
