[package]
name = "neuralmesh-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
uuid = { version = "1.11", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"
local-ip-address = "0.6"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
